[metadata]
name = mode
version = attr: mode.__version__
author = attr: mode.__author__
author_email = attr: mode.__contact__
url = attr: mode.__homepage__
description = attr: mode.__doc__
long_description = file: README.rst
keywords = asyncio, service, bootsteps, graph, coroutine
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Framework :: AsyncIO
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:

[tool:pytest]
minversion=2.8
testpaths = t/unit
python_classes = test_*, Test*

[wheel]
universal = 1

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
ignore = N806, N802, N801, N803, I100, I201, I202, B008

[pep257]
ignore = D102,D104,D203,D105,D213

[mypy]
python_version = 3.6
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_untyped_decorators = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-*]
ignore_missing_imports = True
