[metadata]
name = mode-streaming
version = attr: mode.__version__
author = attr: mode.__author__
author_email = attr: mode.__contact__
url = attr: mode.__homepage__
description = attr: mode.__doc__
long_description = file: README.rst
keywords = asyncio, service, bootsteps, graph, coroutine
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Framework :: AsyncIO
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:

[tool:pytest]
minversion=2.8
testpaths = t/unit t/functional
python_classes = test_*

[wheel]
universal = 1

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
ignore = N806, N802, N801, N803, I100, I201, I202, B008, W504, G200, S101, E203, E266, E501, W503
enable-extensions = G
max-line-length = 88
per-file-ignores =
    t/*: S301,S403


#[pep257]
#ignore = D102,D104,D203,D105,D213

[pydocstyle]
ignore = D102,D104,D105,D107,D203,D213,D406,D407,D413

[mypy]
# --strict but not --implicit-optional
python_version = 3.6
cache_fine_grained = True
check_untyped_defs = True
disallow_any_decorated = False
disallow_any_expr = False
disallow_any_generics = False
disallow_any_unimported = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
follow_imports = normal
ignore_missing_imports = True
implicit_reexport = False
no_implicit_optional = False
pretty = True
show_column_numbers = True
show_error_codes = True
show_error_context = True
strict_equality = True
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True

[isort]
profile=black
known_first_party=mode
